kubernetes/test-django-pod.yaml
apiVersion : v1
kind: Pod
metadata:
  name: test-django-pod
  labels:
    name: test-django-pod
spec:
  containers:
    - name: django-app
      image: django-app:1
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  type: NodePort
  selector:
    name: test-django-pod
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30000
